Adicionado Renda Estavel e piada do Vegata.

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 		<link rel="stylesheet" href="css/reveal.min.css">
 		<link rel="stylesheet" href="css/theme/beige.css" id="theme">
 		<link rel="stylesheet" href="css/custom.css">
+		<link rel="stylesheet" href="vendor/font-awesome-4.0.3/css/font-awesome.min.css">
 
 		<!-- For syntax highlighting -->
 		<link rel="stylesheet" href="lib/css/zenburn.css">
@@ -60,10 +61,11 @@
 					<section>	
 						<h2>Estórias</h2>
 						<span class="framgment fade-out">
-							<p class="fragment fade-in">Perpectiva do usuário</p>
+							<p class="fragment fade-in">Perspectiva do usuário</p>
 						    <p class="fragment fade-in">Melhora na percepção de problemas</p>
 						    <p class="fragment fade-in">Soluções apresentadas mais rapidamente</p>
 						    <p class="fragment fade-in">Todos criam suas estórias</p>
+						    <p class="fragment fade-in">Temos maior transparência com os stakeholders</p>
 						    <p class="fragment fade-in">Aumenta a probabilidade de sucesso</p>
 						</span>
 					</section>
@@ -102,15 +104,38 @@ $git checkout
 					</section>
 				</section>
 
-				<!-- Example of nested vertical slides -->
+				<section>
+					<section data-background="test/Bathing_in_money.jpg">
+						<h1>
+							Renda Estável
+						</h1>
+					</section>
+					
+					<section>
+						<h2>O MEJ como cliente</h2>
+						<span class="framgment fade-out">
+							<p class="fragment fade-in"><i class="fa fa-usd"></i> 300 empresas</p>
+							<p class="fragment fade-in"><i class="fa fa-usd"></i> Sem concorrência</p>
+							<p class="fragment fade-in"><i class="fa fa-usd"></i> 1/6 do total do mercado</p>
+							<p class="fragment fade-in"><i class="fa fa-usd"></i> R$15/mês</p>
+							<p class="fragment fade-in"><i class="fa fa-usd"></i> R$750/mês</p>
+							<p class="fragment fade-in"><i class="fa fa-usd"></i> R$9.000/ano</p>
+						</span>
+					</section>
+
+					<section data-background="test/vegeta-8000.png">
+						<h2 class="over9000">O Que? Mais de 8 mil?</h2>
+					</section>
+				</section>
+
 				<section>
 					<h1>Considerações Finais</h1>
 					<p>É preciso coragem e confiança no trabalho de cada e de todos ao
-mesmo tempo.
-Acredito que isso seja o bastante para que possamos fazer dessa equipe de 2014 uma equipe de
-grandes realizações.
-Obrigado a todos!
-</p>
+						mesmo tempo.
+						Acredito que isso seja o bastante para que possamos fazer dessa equipe de 2014 uma equipe de
+						grandes realizações.						
+					</p>
+					<h2>Obrigado a todos!</h2>
 				</section>
 
 			</div>
