fazendo alteracoes para suportar para expor para pdf

--- a/index.html
+++ b/index.html
@@ -19,15 +19,12 @@
 		<link rel="stylesheet" href="css/theme/beige.css" id="theme">
 		<link rel="stylesheet" href="css/custom.css">
 		<link rel="stylesheet" href="vendor/font-awesome-4.0.3/css/font-awesome.min.css">
-
+		<link rel="stylesheet" type="text/css" href="css/print/pdf.css" media="print">
 		<!-- For syntax highlighting -->
 		<link rel="stylesheet" href="lib/css/zenburn.css">
 
 		<!-- If the query includes 'print-pdf', use the PDF print sheet -->
-		<script>
-			document.write( '<link rel="stylesheet" href="css/print/' + ( window.location.search.match( /print-pdf/gi ) ? 'pdf' : 'paper' ) + '.css" type="text/css" media="print">' );
-		</script>
-
+	
 		<!--[if lt IE 9]>
 		<script src="lib/js/html5shiv.js"></script>
 		<![endif]-->
