Adicionado novas imagens e refeito o slide

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<head>
 		<meta charset="utf-8">
 
-		<title>Candidato Marco Oliveira Projetos 2014</title>
+		<title>Equipe Omega</title>
 
 		<meta name="description" content="A framework for easily creating beautiful presentations using HTML">
 		<meta name="author" content="Hakim El Hattab">
@@ -37,188 +37,61 @@
 			<!-- Any section element inside of this container is displayed as a slide -->
 			<div class="slides">
 				<section>
-					<h1>Apresentação DPRJ</h1>
+					<h1>User Stories</h1>
 				</section>
 
 				<section>
 					<section>
 						<h1>A equipe</h1>
-						<h3>Marco Antonio Oliveira</h3>
 						<a class="image">
-								<img width="218" height="238" src="test/marco.jpg" alt="Diretor">
+								<img width="218" height="238" style="padding:20px" src="images/Omega.png" alt="Diretor">
 						</a>
-
-						<p>
-							Diretor
-						</p>
 					</section>
-					<section>
-						<h1>A equipe</h1>
-						<h3>Jefferson Brito</h3>
-						<a class="image">
-								<img width="218" height="238" src="test/jefferson.jpg" alt="Gerente de Projetos">
-						</a>
 
-						<p>
-							Gerente de Projetos
-						</p>
-					</section>
-					<section>
-						<h1>A equipe</h1>
-						<h3>Marcos Conceição</h3>
-						<a class="image">
-								<img width="218" height="238" src="test/marcos.jpg" alt="Gerente de Projetos">
-						</a>
-
-						<p>
-							Gerente de Projetos
-						</p>
-					</section>
-					<section>
-						<h1>A equipe</h1>
-						<h3>Mateus Cordeiro</h3>
-						<a class="image">
-								<img width="218" height="238" src="test/mateus.jpg" alt="Gerente de Projetos">
-						</a>
-
-						<p>
-							Gerente de Projetos
-						</p>
-					</section>
-					<section>
-						<h1>A equipe</h1>
-						<h3>Vinicius Dias</h3>
-						<a class="image">
-								<img width="218" height="238" src="test/vinicius.jpg" alt="Gerente de Treinamentos">
-						</a>
-
-						<p>
-							Gerente de Treinamentos
-						</p>
-					</section>
 				</section>
 
 				<section>
-					<section>
-						<h1>Cargos e Habilidades</h1>
+					<section data-background="images/john_travolta.gif">
+						<h1 style="color:white">O que é isso?</h1>
 					</section>
 
 					<section>
-						<h1>Trainees</h1>
-					</section>
-					<section>
-						<h2>Perfil</h2>
+						<h2>O que é</h2>
 						<span class="framgment fade-out">
-							<p class="fragment fade-in">Proatividade</p>
-						    <p class="fragment fade-in">Comprometimento</p>
-						    <p class="fragment fade-in">Sede por conhecimentos técnicos</p>
-						    <p class="fragment fade-in">Facilidade pra solucionar problemas</p>
-						</span>
-					</section>
-					<section>
-						<h2>Conhecimentos</h2>
-						<span class="framgment fade-out">
-							<p class="fragment fade-in">Funcionamento da empresa</p>
-						    <p class="fragment fade-in">Filosofia Ágil</p>
-						    <p class="fragment fade-in">Plano de treinamentos</p>
-						</span>
-					</section>
-					<section>
-						<h2>Leitura recomendada</h2>
-						<span class="framgment fade-out">
-							<p class="fragment fade-in">Agile Estimating and Planning </p>
-						    <p class="fragment fade-in">The Pragmatic Programmer: From Journeyman to Master</p>
-						</span>
-					</section>
-					<section>
-						<h1>Gerente de Projetos</h1>
-					</section>
-					<section>
-						<h2>Perfil</h2>
-						<span class="framgment fade-out">
-							<p class="fragment fade-in">Paciência</p>
-						    <p class="fragment fade-in">Independência</p>
-						    <p class="fragment fade-in">Excelente trabalho em equipe</p>
-						    <p class="fragment fade-in">Boa comunicação</p>
-						</span>
-					</section>
-					<section>
-						<h2>Conhecimentos</h2>
-						<span class="framgment fade-out">
-							<p class="fragment fade-in">Scrum avançado</p>
-						    <p class="fragment fade-in">Conhecer o Manifesto Ágil e sua filosofia</p>
-						    <p class="fragment fade-in">Conhecimento em Startup Enxuta, voltada à parte de gerência de projetos</p>
-						    <p class="fragment fade-in">Conhecimento em ferramentas de gerência avançado (Kanban, burndown etc.)</p>
-						    <p class="fragment fade-in">Negociação com clientes</p>
-						</span>
-					</section>
-					<section>
-						<h2>Leituras recomendadas</h2>
-						<span class="framgment fade-out">
-							<p class="fragment fade-in">Succeeding with Agile: Software Development Using Scrum</p>
-						    <p class="fragment fade-in">Lean Startup</p>
-						</span>
-					</section>
-					<section>
-						<h1>Gerente de Treinamentos</h1>
-					</section>
-					<section>
-						<h2>Perfil</h2>
-						<span class="framgment fade-out">
-							<p class="fragment fade-in">Busca constante por inovação</p>
-						    <p class="fragment fade-in">Independência</p>
-						    <p class="fragment fade-in">Transparência</p>
-						</span>
-					</section>
-					<section>
-						<h2>Conhecimentos</h2>
-						<span class="framgment fade-out">
-							<p class="fragment fade-in">Excelente percepção das falhas de conhecimento da empresa</p>
-						    <p class="fragment fade-in">Técnicas e ferramentas inovadoras</p>
-						    <p class="fragment fade-in">Esquematizar plano de treinamentos</p>
-						</span>
-					</section>
-					<section>
-						<h2>Leituras recomendadas</h2>
-						<span class="framgment fade-out">
-							<p class="fragment fade-in">Trainning for Dummies</p>
-						    <p class="fragment fade-in">Manual de treinamentos e desenvolvimento</p>
-						    <p class="fragment fade-in">Artigo: "Desenvolvendo um plano de treinamento para seus colaboradores"(obrigatória)</p>
-						</span>
-					</section>
-					<section>
-						<h1>Diretor</h1>
-					</section>
-					<section>
-						<h2>Perfil</h2>
-						<span class="framgment fade-out">
-							<p class="fragment fade-in">Liderança</p>
-						    <p class="fragment fade-in">Boa gestão de pessoas</p>
-						</span>
-					</section>
-					<section>
-						<h2>Conhecimentos</h2>
-						<span class="framgment fade-out">
-							<p class="fragment fade-in">Entender o que motiva a equipe</p>
-							<p class="fragment fade-in">Saber como distribuir atividades</p>
-							<p class="fragment fade-in">Boa visão estratégica</p>
+						    <p class="fragment fade-in">Contar estórias</p>
+						    <p class="fragment fade-in">Criar personagens</p>
+						    <p class="fragment fade-in">Definir escopo</p>
+						    <p class="fragment fade-in">Organizar requisitos</p>
 						</span>
 					</section>
 			</section>
 			<section>
-				<section>
-					<h1>A missão</h1>
+				<section data-background="images/giphy.gif">
+					<h1 style="color:white">Como usar</h1>
 				</section>
 				<section>
-					<h2>Diretoria de Projetos</h2>
-					<span class="framgment fade-out">
-						<p class="fragment fade-in">Identificar necessidades dos clientes</p>
-					    <p class="fragment fade-in">Precificar e  desenvolver escopo para os projetos</p>
-					    <p class="fragment fade-in">Incentivar o crescimento técnico na empresa</p>
-					    <p class="fragment fade-in">Aperfeiçoar e aprimorar as técnicas, ferramentas e práticas de desenvolvimento</p>
-					</span>
+						<h2>Como usar</h2>
+						<span class="framgment fade-out">
+						    <p class="fragment fade-in">Identificar os stakeholders</p>
+						    <p class="fragment fade-in">Identificar os clientes do software</p>
+						    <p class="fragment fade-in">Acrescimo contínuo</p>
+						</span>
 				</section>
 			</section>
+				<section>
+					<section data-background="images/dbz.jpg">
+						<h1 style="color:white">Personas</h1>
+					</section>
+					<section>
+						<h2>O que são as Personas</h2>
+						<span class="framgment fade-out">
+						    <p class="fragment fade-in">Usuários ficticios</p>
+						    <p class="fragment fade-in">Tem uma historia própria</p>
+						    <p class="fragment fade-in">Tem uma personalidade conhecida</p>
+						    <p class="fragment fade-in">Descrição</p>
+						</span>
+					</section>
+				</section>
 			<section>
 				<h1>Obrigado a todos!</h1>
 			</section>
